--- a/configuration.properties
+++ b/configuration.properties
@@ -11,4 +11,4 @@ username4=user32
 username5=storemanager70
 username6=salesmanager128
 
-password=UserUser123
+password=#password was intentionally hidden
